fix: clean up SCSS formatting for better readability

--- a/docs/assets/src/scss/_component-examples.scss
+++ b/docs/assets/src/scss/_component-examples.scss
@@ -2,15 +2,14 @@
 
 .bd-example-row {
   .row {
-    background-image:
-      linear-gradient(45deg, $neutral-1-a2 25%, transparent 25%), linear-gradient(-45deg, $neutral-1-a2 25%, transparent 25%),
+    background-image: linear-gradient(45deg, $neutral-1-a2 25%, transparent 25%), linear-gradient(-45deg, $neutral-1-a2 25%, transparent 25%),
       linear-gradient(45deg, transparent 75%, $neutral-1-a2 75%), linear-gradient(-45deg, transparent 75%, $neutral-1-a2 75%);
     background-size: 20px 20px;
     background-position:
       0 0,
       0 10px,
       10px -10px,
-      -10px 0px;
+      -10px 0;
     > .col,
     > [class^='col-'] {
       padding-top: 0.75rem;
